--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/template/shop.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/template/shop.html
@@ -1,4 +1,5 @@
-﻿<h1 class="dfree-header mce-content-body" style="text-align: center;" contenteditable="true" spellcheck="false">世界上最新最好的TinyMCE</h1>
+﻿<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<h1 class="dfree-header mce-content-body" style="text-align: center;" contenteditable="true" spellcheck="false">世界上最新最好的TinyMCE</h1>
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://tiny.cloud/images/medium-pic.jpg" /></p>
 <p>&nbsp;</p>
 <h2>富文本编辑器</h2>
