--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/template/product.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/template/product.html
@@ -1,3 +1,4 @@
+﻿<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <p style="text-align: center; font-size: 15px;"><img title="TinyMCE Logo" src="//www.tinymce.com/images/glyph-tinymce@2x.png" alt="TinyMCE Logo" width="110" height="97" /></p>
 <h1 style="text-align: center;">Welcome to TinyMCE Cloud !</h1>
 <h5 style="text-align: center;">Note, this includes some "enterprise/premium" features.<br />Visit the <a href="https://www.tinymce.com/pricing/#demo-enterprise">pricing page</a> to learn more about our premium plugins.</h5>
