--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -11,16 +11,23 @@
 <link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/metro/easyui.css">
 <link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/mobile.css">
 <link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/icon.css">
+<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
 <script src="~/view-resources/Views/Product/lib/jquery.easyui.min.js"></script>
 <script src="~/view-resources/Views/Product/lib/jquery.easyui.mobile.js"></script>
+@section scripts
+    {
+    <script src="~/view-resources/Views/Product/Index.js" asp-append-version="true"></script>
+}
+
 
 <style type="text/css">
     .device {
         width: 400px;
         height: 760px;
-        margin: 10px 0 0 170px;
-        background: url('~/view-resources/Views/Product/image/phone.png') no-repeat;
+        margin: 10px 0 0 20px;
+        background: url('/view-resources/Views/Product/image/phone.png') no-repeat;
         position: relative;
+      
     }
 
     .demo-wrap {
@@ -32,13 +39,6 @@
         left: 23px;
     }
 </style>
-
-@section scripts
-    {
-    <script src="~/view-resources/Views/Product/Index.js" asp-append-version="true"></script>
-
-}
-
 
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -137,25 +137,7 @@
                     <div class="form-group form-float">
                         <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
                         </div>
-                        <div class="device">
-                            <div class="demo-wrap panel-noscroll">
-                                <div class="panel navpanel panel-htop easyui-fluid" style="display: block; width: 322px;">
-                                    <header class="panel-header panel-header-noborder" style="width: 322px;">
-                                        <div class="m-toolbar">
-                                            <div class="m-title">页面预览效果</div>
-                                        </div>
-                                    </header>
-                                    <div id="elm1" class="easyui-navpanel panel-body panel-body-nobottom panel-body-noborder" data-options="href:'_content.html'" style="padding: 10px; width: 322px; height: 402px;" title="">
-
-                                    </div>
-                                    <footer class="panel-footer panel-footer-noborder">
-                                        <div class="m-toolbar">
-                                            <div class="m-title">xxxx系统</div>
-                                        </div>
-                                    </footer>
-                                </div>
-                            </div>
-                        </div>
+                        <textarea id="elm1" name="HtmlContent">请输入页面图文内容...</textarea>
 
                     </div>
                     <div class="modal-footer">
@@ -175,3 +157,22 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewModalLabel" aria-hidden="true">
+    <div class="modal-dialog" style="width: 400px;">
+        <div class="modal-content" >
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="previewModalLabel"><span>模态框（Modal）标题</span></h4>
+            </div>
+            <div class="device">
+                <div class="demo-wrap">
+                    <div class="easyui-navpanel" style="padding:10px">
+                        asdfgghfghfg
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
