--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -163,12 +163,12 @@
         <div class="modal-content" >
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="previewModalLabel"><span>模态框（Modal）标题</span></h4>
+                <h4 class="modal-title" id="previewModalLabel"><span>手机预览效果</span></h4>
             </div>
             <div class="device">
                 <div class="demo-wrap">
                     <div class="easyui-navpanel" style="padding:10px">
-                        asdfgghfghfg
+                       
                     </div>
                 </div>
             </div>
