--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/codepage.css
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/codepage.css
@@ -1,10 +1,37 @@
-﻿div {
-    width: 400px;
-    height: 400px;
-    border: 1px solid #000;
+﻿
+html {
+   
+    -webkit-tap-highlight-color: rgba(0,0,0,0)
+}
+
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+    padding: 15px;
+}
+
+a {
+    color: #337ab7;
+    text-decoration: none
 }
 
 img {
     width: 100%;
-    height: 100%;
+}
+
+ul, menu, dir {
+    display: block;
+    list-style-type: disc;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 40px;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
 }
