--- a/src/Lanting.IDCode.Web.Mvc/Views/Account/Login.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Account/Login.cshtml
@@ -54,14 +54,14 @@
                     <button id="LoginButton" class="btn btn-block bg-pink waves-effect" type="submit">@L("LogIn")</button>
                 </div>
             </div>
-            @if (Model.IsSelfRegistrationAllowed)
+            @*@if (Model.IsSelfRegistrationAllowed)
             {
                 <div class="row m-t-15 m-b--20">
                     <div class="col-xs-12">
                         <a asp-action="Register">@L("Register")</a>
                     </div>
                 </div>
-            }
+            }*@
         </form>
     </div>
 </div>
