--- a/src/Lanting.IDCode.Web.Mvc/Views/Task/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Task/Index.cshtml
@@ -114,19 +114,19 @@
                         </div>
                     </div>
 
-                    <div class="form-group form-float">
+                    @*<div class="form-group form-float">
                         <div class="form-line">
                             <input class="form-control" type="text" id="AFCodeLength" name="AFCodeLength" maxlength="11">
                             <label for="AFCodeLength" class="form-label">防伪码长度</label>
                         </div>
-                    </div>
+                    </div>*@
                     @*<div class="form-group form-float">
                             <div class="form-line">
                                 <input class="form-control" type="text" id="AntiFackCodeType" name="AntiFackCodeType" required maxlength="11">
                                 <label for="AntiFackCodeType" class="form-label">防伪码类型</label>
                             </div>
                         </div>*@
-                    <p>防伪码类型目前只支持数字</p>
+                    @*<p>防伪码类型目前只支持数字</p>*@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">@L("Cancel")</button>
