--- a/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <link rel="shortcut icon" href="~/favicon.ico">
 
-    <title>IDCode</title>
+    <title>码农之田</title>
 
 
     <link href="~/fonts/roboto/roboto.css" rel="stylesheet" asp-append-version="true" />
@@ -107,7 +107,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="fa fa-cubes"></i> IDCode -- @loginInformation.User.Surname</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="fa fa-cubes"></i> 码农之田 -- @loginInformation.User.Surname</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
