--- a/src/Lanting.IDCode.Web.Mvc/Views/Roles/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Roles/Index.cshtml
@@ -5,12 +5,8 @@
 }
 @section scripts
 {
-    <environment names="Development">
+    <environment names="Development,Staging,Production">
         <script src="~/view-resources/Views/Roles/Index.js" asp-append-version="true"></script>
-    </environment>
-
-    <environment names="Staging,Production">
-        <script src="~/view-resources/Views/Roles/Index.min.js" asp-append-version="true"></script>
     </environment>
 }
 <div class="row clearfix">
