--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -1,95 +1,117 @@
-﻿@using Lanting.IDCode.Web.Startup
-@{
-    ViewData["Title"] = "添加页面";
-    ViewBag.CurrentPageName = PageNames.Products;
+﻿@section scripts
+    {
+    <script src="~/view-resources/Views/Product/Create.js" asp-append-version="true"></script>
 }
-<script src="~/view-resources/Views/Products/tiny/tinymce.min.js"></script>
-<script>
-    tinymce.init({
-        selector: "h1.editable#elm2",       //elm2为ID                 可将selector值理解为css中class、ID等，以此使用tinymce中样式（比如编辑框内文本显示样式、工具栏样式）--个人理解，不保证正确
-        inline: true,                       //为true时，编辑工具栏隐藏
-        toolbar: "undo redo",
-        menubar: false
-    });
-    tinymce.init({
-        selector: 'textarea#elm1',          //<textarea>中为编辑区域
-        theme: "modern",                  //主题
-        language: "zh_cn",                //语言 ，可自行下载中文
 
-        height: 300,
-        plugins: [                             //插件，可自行根据现实内容删除
-            "advlist autolink lists charmap print preview hr anchor pagebreak spellchecker",
-            "searchreplace wordcount visualblocks visualchars fullscreen insertdatetime  nonbreaking image imagetools",
-            "save table contextmenu directionality emoticons paste textcolor"
-        ],
 
-        //content_css: "css/content.css",      //引用的外部CSS样式，可删除
-        toolbar: "insertfile undo redo | styleselect fontselect fontsizeselect| bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | l      | print preview fullpage | forecolor backcolor | image",                          //工具栏，可根据需求删除
-        style_formats: [                        //初始时提供的默认格式
-            { title: 'Bold text', inline: 'b' },
-            { title: 'Red text', inline: 'span', styles: { color: '#ff0000' } },
-            { title: 'Red header', block: 'h1', styles: { color: '#ff0000' } },
-            { title: 'Example 1', inline: 'span', classes: 'example1' },
-            { title: 'Example 2', inline: 'span', classes: 'example2' },
-            { title: 'Table styles' },
-            { title: 'Table row 1', selector: 'tr', classes: 'tablerow1' }
-        ],
-        language: 'zh_CN',
-        images_upload_handler: function (blobInfo, success, failure) {
-            var xhr, formData;
-            xhr = new XMLHttpRequest();
-            xhr.withCredentials = false;
-            xhr.open('POST', _this.myPackage.template_api + '/api/services/app/Template/UploadPhoto', true);
-            xhr.setRequestHeader("Authorization", 'Bearer ' + _this.oidc_msg.access_token);
-            xhr.onload = function () {
-                var json;
-                if (xhr.status != 200) {
-                    if (xhr.status == 401) {
-                        failure('HTTP Error: 401,token 授权过期');
-                    } else {
-                        failure('HTTP Error: ' + xhr.status);
-                    }
-                    return;
-                }
-                console.log(xhr.responseText);
-                json = JSON.parse(xhr.responseText);
-                if (!json || typeof json.result.url != 'string') {
-                    failure('Invalid JSON: ' + xhr.responseText);
-                    return;
-                }
+<script src="~/view-resources/Views/Product/tiny/tinymce.min.js"></script>
+<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/metro/easyui.css">
+<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/mobile.css">
+<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/icon.css">
+<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
+<script src="~/view-resources/Views/Product/lib/jquery.easyui.min.js"></script>
+<script src="~/view-resources/Views/Product/lib/jquery.easyui.mobile.js"></script>
 
-                success(json.result.url);
-            };
-            formData = new FormData();
-            formData.append('file', blobInfo.blob(), blobInfo.filename());
-            xhr.send(formData);
-        }
-    });
-</script>
-
-<body>
-
-    <br>
-    <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-let:15%;margin-right:15%;padding:0;margin:2px 0;">
-    </div>
-
-    <h1 class="editable" id="elm2">请输入页面名称</h1>
-    <textarea id="elm1">请输入页面图文内容...</textarea>                 <!-- 编辑框 elm1为此部件ID-->
-    <div class="modal-footer">
-        <button type="button" class="btn btn-default close-button waves-effect" data-dismiss="modal">@L("Cancel")</button>
-        <button type="button" class="btn btn-primary save-button waves-effect">@L("Save")</button>
-    </div>
-
-</body>
-<script>
-    function doy() {
-        var tmp = tinymce.get('elm1').getContent();      //此函数可获得编辑框内容
-        var tmp2 = tinymce.get('elm2').getContent();
-        $('textarea').hide()
-        $('.activityshow_box').show();
-        $('.activityshow_box').append(tmp);
-        tinymce.activeEditor.setContent("<p style='color:red;'>这只是个测试</p>");     //设置编辑框内容   Jquery.text('内容')方法也可以达到设置编辑框内容目的
-        alert(tmp);
-        alert(tmp2);
+<style type="text/css">
+    .device {
+        width: 400px;
+        height: 760px;
+        background: url('/view-resources/Views/Product/image/phone.png') no-repeat;
+        position: relative;
     }
-</script>
+
+    .demo-wrap {
+        position: absolute;
+        width: 322px;
+        height: 482px;
+        background: #ccc;
+        top: 117px;
+        left: 23px;
+    }
+</style>
+<div class="body">
+    <form name="productInfoCreateForm" role="form" novalidate class="form-validation">
+        <div class="modal-body">
+            <div class="row clearfix">
+                <div class="col-sm-4">
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input class="form-control" type="text" id="Code" name="Code">
+                            <label for="Code" class="form-label">页面代号</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input class="form-control" type="text" id="FullName" name="FullName">
+                            <label for="FullName" class="form-label">页面名称</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="form-group form-float">
+                        <div class="form-line">
+                            <input class="form-control" type="text" id="Description" name="Description">
+                            <label for="Description" class="form-label">描述</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row clearfix">
+                <div class="col-sm-7">
+                    <div class="form-group form-float">
+                        <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
+                        </div>
+                        <textarea id="elm1" name="HtmlContent">请输入页面图文内容...</textarea>
+                    </div>
+                </div>
+                <div class="col-sm-5" >
+                    <div class="device">
+                        <div class="demo-wrap">
+                            <div class="easyui-navpanel" style="padding:10px">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">@L("Cancel")</button>
+                <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
+            </div>
+        </div>
+    </form>
+
+    <div class="modal fade" id="ProductInfoEditModal" tabindex="-1" role="dialog" aria-labelledby="ProductInfoEditModalLabel" data-backdrop="static">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewModalLabel" aria-hidden="true">
+        <div class="modal-dialog" style="width: 400px;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="previewModalLabel"><span>手机预览效果</span></h4>
+                </div>
+                <div class="device">
+                    <div class="demo-wrap">
+                        <div class="easyui-navpanel" style="padding:10px">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+</div>
