--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -7,37 +7,11 @@
     ViewBag.CurrentPageName = PageNames.Products; //The menu item will be active for this page.
 }
 
-<script src="~/view-resources/Views/Product/tiny/tinymce.min.js"></script>
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/metro/easyui.css">
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/mobile.css">
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/icon.css">
-<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
-<script src="~/view-resources/Views/Product/lib/jquery.easyui.min.js"></script>
-<script src="~/view-resources/Views/Product/lib/jquery.easyui.mobile.js"></script>
+
 @section scripts
     {
     <script src="~/view-resources/Views/Product/Index.js" asp-append-version="true"></script>
 }
-
-
-<style type="text/css">
-    .device {
-        width: 400px;
-        height: 760px;
-        margin: 10px 0 0 20px;
-        background: url('/view-resources/Views/Product/image/phone.png') no-repeat;
-        position: relative;
-    }
-
-    .demo-wrap {
-        position: absolute;
-        width: 322px;
-        height: 482px;
-        background: #ccc;
-        top: 117px;
-        left: 23px;
-    }
-</style>
 
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -93,85 +67,9 @@
                         }
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right" data-toggle="modal" data-target="#ProductInfoCreateModal">
+                <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right">
                     <i class="material-icons">add</i>
                 </button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="ProductInfoCreateModal" tabindex="-1" role="dialog" aria-labelledby="ProductInfoCreateModalLabel" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form name="productInfoCreateForm" role="form" novalidate class="form-validation">
-                <div class="modal-header">
-                    <h4 class="modal-title">
-                        <span>创建新页面图文</span>
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row clearfix">
-                        <div class="col-sm-6">
-                            <div class="form-group form-float">
-                                <div class="form-line">
-                                    <input class="form-control" type="text" id="Code" name="Code">
-                                    <label for="Code" class="form-label">页面代号</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group form-float">
-                                <div class="form-line">
-                                    <input class="form-control" type="text" id="FullName" name="FullName">
-                                    <label for="FullName" class="form-label">页面名称</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group form-float">
-                        <div class="form-line">
-                            <input class="form-control" type="text" id="Description" name="Description">
-                            <label for="Description" class="form-label">描述</label>
-                        </div>
-                    </div>
-                    <div class="form-group form-float">
-                        <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
-                        </div>
-                        <textarea id="elm1" name="HtmlContent">请输入页面图文内容...</textarea>
-
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">@L("Cancel")</button>
-                        <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="ProductInfoEditModal" tabindex="-1" role="dialog" aria-labelledby="ProductInfoEditModalLabel" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="previewModal" tabindex="-1" role="dialog" aria-labelledby="previewModalLabel" aria-hidden="true">
-    <div class="modal-dialog" style="width: 400px;">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="previewModalLabel"><span>手机预览效果</span></h4>
-            </div>
-            <div class="device">
-                <div class="demo-wrap">
-                    <div class="easyui-navpanel" style="padding:10px">
-
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -181,7 +79,7 @@
 <div class="modal fade" id="ShowQRCode" tabindex="-1" role="dialog" aria-labelledby="ShowQRCodeLabel" aria-hidden="true">
     <div class="modal-dialog" style="width: 150px">
         <div class="modal-content">
-            
+
             <div style="vertical-align:central;text-align:center">
                 <img id="showQrImage" />
             </div>
@@ -189,4 +87,3 @@
         </div>
     </div>
 </div>
-
