--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -1,9 +1,4 @@
-﻿@section scripts
-    {
-    <script src="~/view-resources/Views/Product/Create.js" asp-append-version="true"></script>
-}
-
-
+﻿
 <script src="~/view-resources/Views/Product/tiny/tinymce.min.js"></script>
 <link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/metro/easyui.css">
 <link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/mobile.css">
@@ -29,11 +24,13 @@
         left: 23px;
     }
 </style>
+
 <div class="body">
-    <form name="productInfoCreateForm" role="form" novalidate class="form-validation">
+
+    <form name="createForm" role="form" novalidate class="form-validation">
         <div class="modal-body">
             <div class="row clearfix">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                     <div class="form-group form-float">
                         <div class="form-line">
                             <input class="form-control" type="text" id="Code" name="Code">
@@ -79,8 +76,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">@L("Cancel")</button>
-                <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
+                <button type="button" class="btn btn-default waves-effect" onClick="location.href='@Url.Action("Index")'">@L("Cancel")</button>
+                <button type="submit" class="btn btn-primary waves-effect">创建</button>
             </div>
         </div>
     </form>
@@ -111,7 +108,7 @@
         </div>
     </div>
 
-
-
-
 </div>
+
+
+<script src="~/view-resources/Views/Product/Create.js" asp-append-version="true"></script>
