--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Index.cshtml
@@ -57,7 +57,7 @@
                                         <i class="material-icons">menu</i>
                                     </a>
                                     <ul class="dropdown-menu pull-right">
-                                        <li><a href="#" class="waves-effect waves-block edit-productinfo" data-productinfo-id="@item.Id" data-toggle="modal" data-target="#ProductInfoEditModal"><i class="material-icons">edit</i>@L("Edit")</a></li>
+                                        <li><a href="@Url.Action("Edit",new { id=item.Id })"><i class="material-icons">edit</i>@L("Edit")</a></li>
                                         <li><a href="#" class="waves-effect waves-block delete-productinfo" data-productinfo-id="@item.Id" data-productinfo-name="@item.Id"><i class="material-icons">delete_sweep</i>@L("Delete")</a></li>
                                         <li><a href="#" class="waves-effect waves-block show-qr" data-productinfo-code="@item.QRCodeImage" data-toggle="modal" data-target="#ShowQRCode"><i class="material-icons">label</i>二维码</a></li>
 
@@ -67,7 +67,7 @@
                         }
                     </tbody>
                 </table>
-                <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right">
+                <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right" onClick="location.href='@Url.Action("Create")'">
                     <i class="material-icons">add</i>
                 </button>
             </div>
