html content modified

--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -67,8 +67,8 @@
                 <div class="col-sm-5" >
                     <div class="device">
                         <div class="demo-wrap">
-                            <div class="easyui-navpanel" style="padding:10px">
-
+                            <div class="easyui-navpanel"  style="padding:10px" contenteditable="true">
+                                <iframe src="http://www.checkid.cn/store/detail/a91c00b7-8806-b700-1ca9-06884c34ade5" height="90%" contenteditable="true" ></iframe>
                             </div>
                         </div>
                     </div>
@@ -99,8 +99,8 @@
                 </div>
                 <div class="device">
                     <div class="demo-wrap">
-                        <div class="easyui-navpanel" style="padding:10px">
-
+                        <div class="easyui-navpanel" data-options="href:'home.html'" style="padding:10px">
+                            
                         </div>
                     </div>
                 </div>
