--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -57,18 +57,12 @@
             </div>
 
             <div class="row clearfix">
-                <div class="col-sm-7">
-                    <div class="form-group form-float">
-                        <div class="activityshow_box" style="margin-top:40%;width: 100%;display:none;margin-left:15%;margin-right:15%;padding:0;margin:2px 0;">
-                        </div>
-                        <textarea id="elm1" name="HtmlContent">请输入页面图文内容...</textarea>
-                    </div>
-                </div>
-                <div class="col-sm-5" >
+               
+                <div class="col-sm-12" >
                     <div class="device">
                         <div class="demo-wrap">
-                            <div class="easyui-navpanel"  style="padding:10px" contenteditable="true">
-                                <iframe src="http://www.checkid.cn/store/detail/a91c00b7-8806-b700-1ca9-06884c34ade5" height="90%" contenteditable="true" ></iframe>
+                            <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
+                                <iframe src="~/codepage/nny/index.html" height="95%" contenteditable="true" ></iframe>
                             </div>
                         </div>
                     </div>
