--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/css/style.css
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/css/style.css
@@ -2359,7 +2359,7 @@
 
 /* General ===================================== */
 body {
-  background-color: #e9e9e9;
+  /*background-color: #e9e9e9;*/
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   -webkit-transition: all 0.5s;
