product page html and label and anticode

--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -62,7 +62,7 @@
                     <div class="device">
                         <div class="demo-wrap">
                             <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
-                                <iframe src="~/codepage/nny/index.html" height="95%" contenteditable="true" ></iframe>
+                                <iframe id="pageHtml" src="~/codepage/nny/template.html" height="95%" contenteditable="true" ></iframe>
                             </div>
                         </div>
                     </div>
