--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -57,16 +57,25 @@
             </div>
 
             <div class="row clearfix">
-               
-                <div class="col-sm-12" >
+
+                <div class="col-sm-6">
                     <div class="device">
                         <div class="demo-wrap">
                             <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
-                                <iframe id="pageHtml" src="~/codepage/nny/template.html" height="95%" contenteditable="true" ></iframe>
+                                <iframe id="pageHtml" src="~/codepage/nny/template.html" height="95%" contenteditable="true"></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-sm-6">
+
+                    <div contenteditable="true" style="width: 450px;height: 720px;padding-top:15px" >
+                        <iframe id="pageLabel" src="~/codepage/nny/template_label.html" height="95%" contenteditable="true"></iframe>
+                    </div>
+
+                </div>
+
             </div>
 
             <div class="modal-footer">
@@ -94,7 +103,7 @@
                 <div class="device">
                     <div class="demo-wrap">
                         <div class="easyui-navpanel" data-options="href:'home.html'" style="padding:10px">
-                            
+
                         </div>
                     </div>
                 </div>
