--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Edit.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Edit.cshtml
@@ -61,14 +61,22 @@
 
         <div class="row clearfix">
 
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <div class="device">
                     <div class="demo-wrap">
                         <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
-                            <iframe src="@string.Format("~/codepage/nny/{0}.html",Model.Code)" height="95%" contenteditable="true"></iframe>
+                            <iframe id="pageHtml" src="@string.Format("~/codepage/nny/{0}.html",Model.Code)" height="95%" contenteditable="true"></iframe>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="col-sm-6">
+
+                <div contenteditable="true" style="width: 450px;height: 720px;padding-top:15px">
+                    <iframe id="pageLabel" src="@string.Format("~/codepage/nny/{0}_label.html",Model.Code)" height="95%" contenteditable="true"></iframe>
+                </div>
+
             </div>
         </div>
 
