--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -69,9 +69,8 @@
                 </div>
 
                 <div class="col-sm-6">
-
-                    <div contenteditable="true" style="width: 450px;height: 720px;padding-top:15px" >
-                        <iframe id="pageLabel" src="~/codepage/nny/template_label.html" height="95%" contenteditable="true"></iframe>
+                    <div contenteditable="true">
+                        <iframe scrolling="no" id="pageLabel" style="width:350px; height: 720px;padding-top:15px" src="~/codepage/nny/template_label.html" height="95%"></iframe>
                     </div>
 
                 </div>
