--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -62,7 +62,7 @@
                     <div class="device">
                         <div class="demo-wrap">
                             <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
-                                <iframe id="pageHtml" src="~/codepage/nny/template.html" height="95%" contenteditable="true"></iframe>
+                                <iframe id="pageHtml" src="~/codepage/nne/template.html" height="95%" contenteditable="true"></iframe>
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
 
                 <div class="col-sm-6">
                     <div contenteditable="true">
-                        <iframe scrolling="no" id="pageLabel" style="width:350px; height: 720px;padding-top:15px" src="~/codepage/nny/template_label.html" height="95%"></iframe>
+                        <iframe scrolling="no" id="pageLabel" style="width:350px; height: 720px;padding-top:15px" src="~/codepage/nne/template_label.html" height="95%"></iframe>
                     </div>
 
                 </div>
