--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -1,28 +1,77 @@
-﻿
+﻿<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
+<style>
 
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/metro/easyui.css">
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/mobile.css">
-<link rel="stylesheet" type="text/css" href="~/view-resources/Views/Product/lib/themes/icon.css">
-<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
-<script src="~/view-resources/Views/Product/lib/jquery.easyui.min.js"></script>
-<script src="~/view-resources/Views/Product/lib/jquery.easyui.mobile.js"></script>
-
-<style type="text/css">
-    .device {
-        width: 400px;
-        height: 760px;
-        background: url('/view-resources/Views/Product/image/phone.png') no-repeat;
+    .box {
+        width: 350px;
+        height: 720px;
+        background: black;
         position: relative;
+        margin-top: 10px;
+        border-radius: 30px;
     }
 
-    .demo-wrap {
-        position: absolute;
-        width: 322px;
-        height: 482px;
-        background: #ccc;
-        top: 117px;
-        left: 23px;
-    }
+        .box .top {
+            width: 100%;
+            height: 50px;
+            border-radius: 30px 30px 0 0;
+        }
+
+        .box .center {
+            width: 95%;
+            height: 620px;
+            background-color: #ffffff;
+            margin-left: 2.5%;
+        }
+
+        .box .bottom {
+            width: 100%;
+            height: 45px;
+            border-radius: 0 0 30px 30px;
+        }
+
+        .box .top .r {
+            width: 8px;
+            height: 8px;
+            background: white;
+            position: absolute;
+            left: 50%;
+            margin-left: -4px;
+            border-radius: 100%;
+            top: 5px;
+        }
+
+        .box .top .l {
+            width: 10px;
+            height: 10px;
+            background: white;
+            position: absolute;
+            border-radius: 100%;
+            left: 30%;
+            top: 20px;
+        }
+
+        .box .top .ri {
+            width: 60px;
+            height: 6px;
+            background: white;
+            position: absolute;
+            border-radius: 20%;
+            left: 50%;
+            top: 22px;
+            margin-left: -30px;
+        }
+
+        .box .bottom .tome {
+            width: 30px;
+            height: 30px;
+            position: absolute;
+            left: 50%;
+            margin-left: -15px;
+            background: white;
+            box-shadow: 0 0 2px 2px #C9C9C9;
+            border-radius: 100%;
+            bottom: 10px;
+        }
 </style>
 
 <div class="body">
@@ -59,13 +108,20 @@
             <div class="row clearfix">
 
                 <div class="col-sm-6">
-                    <div class="device">
-                        <div class="demo-wrap">
-                            <div class="easyui-navpanel" style="padding:10px" contenteditable="true">
-                                <iframe id="pageHtml" src="@string.Format("/codepage/{0}/mobile/template.html",ViewBag.UserName)" height="97%" width="120%" contenteditable="true"></iframe>
-                            </div>
+                    <div class="box">
+                        <div class="top">
+                            <div class="r"></div>
+                            <div class="l"></div>
+                            <div class="ri"></div>
+                        </div>
+                        <div class="center">
+                            <iframe height="100%" width="100%" id="pageHtml" src="@string.Format("/codepage/{0}/mobile/template.html",ViewBag.UserName)"></iframe>
+                        </div>
+                        <div class="bottom">
+                            <div class="tome"></div>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="col-sm-6">
