--- a/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
+++ b/src/Lanting.IDCode.Web.Mvc/Views/Product/Create.cshtml
@@ -1,4 +1,14 @@
 ﻿<script src="~/view-resources/Views/Product/lib/jquery.min.js"></script>
+
+<link href="~/fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
+<link href="~/fileinput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css" />
+<script src="~/fileinput/js/plugins/sortable.js" type="text/javascript"></script>
+<script src="~/fileinput/js/fileinput.js" type="text/javascript"></script>
+<script src="~/fileinput/js/locales/fr.js" type="text/javascript"></script>
+<script src="~/fileinput/js/locales/es.js" type="text/javascript"></script>
+<script src="~/fileinput/themes/explorer-fa/theme.js" type="text/javascript"></script>
+<script src="~/fileinput/themes/fa/theme.js" type="text/javascript"></script>
+
 <style>
 
     .box {
@@ -76,7 +86,7 @@
 
 <div class="body">
 
-    <form name="createForm" role="form" novalidate class="form-validation">
+    <form name="createForm" role="form" novalidate class="form-validation" >
         <div class="modal-body">
             <div class="row clearfix">
                 <div class="col-sm-3">
@@ -102,6 +112,13 @@
                             <label for="Description" class="form-label">描述</label>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="file-loading">
+                    <label>Preview File Icon</label>
+                    <input id="file-3" type="file" multiple>
                 </div>
             </div>
 
@@ -141,8 +158,28 @@
     </form>
 
 
-
 </div>
 
 
 <script src="~/view-resources/Views/Product/Create.js" asp-append-version="true"></script>
+
+<script type="text/javascript">
+    $("#file-3").fileinput({
+        theme: 'fa',
+        showUpload: false,
+        showCaption: false,
+        browseClass: "btn btn-primary btn-lg",
+        fileType: "any",
+        previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
+        overwriteInitial: false,
+        initialPreviewAsData: true,
+        initialPreview: [
+            "http://localhost:62114/codepage/nne/content/6366838210985937502669724.jpg"
+        ],
+        initialPreviewConfig: [
+            { caption: "transport-1.jpg", size: 329892, width: "120px", url: "{$url}", key: 1 },
+            { caption: "transport-2.jpg", size: 872378, width: "120px", url: "{$url}", key: 2 },
+            { caption: "transport-3.jpg", size: 632762, width: "120px", url: "{$url}", key: 3 }
+        ]
+    });
+</script>
